Fixed the alignment of Amount in Table header

--- a/src/overrides.css
+++ b/src/overrides.css
@@ -529,6 +529,7 @@ nav {
 
 .table-right-align {
   text-align: right;
+  justify-content: flex-end;
 }
 
 .table-header {
